2007-12-18  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst-libs/gst/interfaces/Makefile.am:
	  interfaces.h is not used anymore so remove it from the build
	  process.

2007-12-17  David Schleef  <ds@schleef.org>

	* gst/videotestsrc/gstvideotestsrc.c:
	* gst/videotestsrc/gstvideotestsrc.h:
	  Add a "blink" pattern.  Turn on the pain.  Apologies.  It's useful
	  for testing vertical refresh synchronization.

2007-12-17  David Schleef  <ds@schleef.org>

	* docs/libs/gst-plugins-base-libs-sections.txt:
	* gst-libs/gst/video/video.c:
	* gst-libs/gst/video/video.h:
	  Add new GstVideFormat enum and write a bunch of helper functions
	  based around it.

2007-12-17  Tim-Philipp Müller  <tim at centricular dot net>

	* Makefile.am:
	  Use new common/win32.mak.

2007-12-17  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst-libs/gst/audio/gstbaseaudiosrc.c:
	(gst_base_audio_src_create), (gst_base_audio_src_change_state):
	Add debug info.
	When going from PLAYING to PAUSED, pause the ringbuffer before calling
	the parent state change function, just like the audiosink, because the
	parent waits for the element to finish its processing before completing
	the state change. This makes going to PAUSED a lot snappier.
	When going from READY to PAUSED, don't allow the ringbuffer to start
	yet.

2007-12-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_audio_caps):
	Yet another fix for broken software that produce files with an empty
	blockalign field. Instead of completely failing, make a second attempt
	at guessing the width/depth by looking at strf->size.

2007-12-16  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/cdda/gstcddabasesrc.c: (gst_cdda_base_src_do_seek),
	  (gst_cdda_base_src_handle_track_seek), (gst_cdda_base_src_create):
	* gst-libs/gst/pbutils/install-plugins.c:
	  (gst_install_plugins_spawn_child), (gst_install_plugins_supported):
	* gst-libs/gst/pbutils/missing-plugins.c: