@@ -1,32 +1,0 @@
-/* GStreamer Interfaces
- * Copyright (C) 2005 Thomas Vander Stichele <thomas at apestaart dot org>
- *
- * interfaces.h: include for all interfaces
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Library General Public
- * License as published by the Free Software Foundation; either
- * version 2 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Library General Public License for more details.
- *
- * You should have received a copy of the GNU Library General Public
- * License along with this library; if not, write to the
- * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
- * Boston, MA 02111-1307, USA.
- */
-
-#ifndef __GST_INTERFACES_H__
-#define __GST_INTERFACES_H__
-
-#include "colorbalance.h"
-#include "mixer.h"
-#include "navigation.h"
-#include "propertyprobe.h"
-#include "tuner.h"
-#include "xoverlay.h"
-
-#endif /* __GST_INTERFACES_H__ */
